[gd_scene load_steps=8 format=3 uid="uid://p0nffayi210s"]

[ext_resource type="Script" path="res://scripts/level2.gd" id="1_0sfxp"]
[ext_resource type="PackedScene" uid="uid://b5kvsrh61econ" path="res://scenes/hud.tscn" id="3_5nr4n"]
[ext_resource type="PackedScene" uid="uid://cqwlqspeotvvm" path="res://scenes/player.tscn" id="3_d3aal"]
[ext_resource type="PackedScene" uid="uid://d1fj7b7xcqjva" path="res://scenes/pause_menu.tscn" id="4_sbqq7"]
[ext_resource type="PackedScene" uid="uid://y4odoqneg6gu" path="res://scenes/game_engine.tscn" id="4_sl4li"]
[ext_resource type="FontFile" uid="uid://d4n1lrsumqyvg" path="res://assets/Fonts/RevMiniPixel.ttf" id="5_2thh8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5dl2t"]
radius = 28.8444

[node name="level2" type="Node2D"]
script = ExtResource("1_0sfxp")

[node name="camera" type="Camera2D" parent="."]
texture_filter = 1
texture_repeat = 1
position = Vector2(297, 218)
zoom = Vector2(1.5, 1.5)
limit_left = -5000000
limit_top = -5000000
limit_bottom = 5000000
limit_smoothed = true
position_smoothing_speed = 1.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_horizontal_offset = 1.0
drag_left_margin = 0.5
drag_right_margin = 0.5
drag_bottom_margin = 1.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="game_engine" parent="." instance=ExtResource("4_sl4li")]
visible = false

[node name="HUD" parent="." instance=ExtResource("3_5nr4n")]
visible = false
follow_viewport_enabled = true

[node name="pause_menu" parent="." instance=ExtResource("4_sbqq7")]

[node name="Code_Input" type="TextEdit" parent="."]
visible = false
texture_filter = 1
texture_repeat = 1
offset_left = 226.0
offset_top = -11.0
offset_right = 682.0
offset_bottom = 365.0
theme_override_fonts/font = ExtResource("5_2thh8")
context_menu_enabled = false

[node name="submit_btn" type="Button" parent="Code_Input"]
texture_filter = 1
texture_repeat = 1
layout_mode = 0
offset_left = 40.0
offset_top = 304.0
offset_right = 156.0
offset_bottom = 336.0
theme_override_fonts/font = ExtResource("5_2thh8")
text = "Enviar CÃ³digo"
flat = true

[node name="close_btn" type="Button" parent="Code_Input"]
texture_filter = 1
texture_repeat = 1
layout_mode = 0
offset_top = 304.0
offset_right = 40.0
offset_bottom = 336.0
theme_override_fonts/font = ExtResource("5_2thh8")
text = "X"
flat = true

[node name="error_label" type="Label" parent="Code_Input"]
texture_filter = 1
texture_repeat = 1
layout_mode = 0
offset_left = 176.0
offset_top = 312.0
offset_right = 440.0
offset_bottom = 368.0
theme_override_fonts/font = ExtResource("5_2thh8")
autowrap_mode = 3

[node name="player" parent="." instance=ExtResource("3_d3aal")]
position = Vector2(216, 200)

[node name="goal" type="Area2D" parent="."]
position = Vector2(224, 248)
collision_layer = 0

[node name="collision" type="CollisionShape2D" parent="goal"]
visible = false
shape = SubResource("CircleShape2D_5dl2t")
debug_color = Color(0.964706, 0, 0.333333, 0.545098)
